z-index fix

--- a/src/scss/components/_displays.scss
+++ b/src/scss/components/_displays.scss
@@ -1,5 +1,6 @@
 // Display components
 @use "sass:map";
+@use "../abstracts/variables" as *;
 @use "../abstracts/colors" as *;
 @use "../abstracts/mixins" as *;
 
@@ -96,7 +97,7 @@
   background: rgba(255,255,255,0.7);
   padding: 2px 10px;
   border-radius: 8px 8px 8px 0;
-  z-index: 1000;
+  z-index: $z-index-version-display;
   pointer-events: none;
   user-select: none;
 }
